[package]
name = "drive_encryptor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.3"
md5 = "0.7.0"
onedrive-api = "0.10.0"
reqwest = "0.12.4"
rouille = "3.6.2"
tokio = { version = "1", features = ["full"] }
xdg-user = "0.2.1"
